...
                            vocalExtractor: DependencyContainer.shared.vocalExtractor,
                            extractedAudioRepository: DependencyContainer.shared.extractedAudioRepository,
                            audioPlayer: DependencyContainer.shared.audioPlayer
                        )) {
                            MenuButton(title: "home.record_button".localized, icon: "mic.fill")
                        }
                        .accessibilityIdentifier("HomeRecordButton")

                        NavigationLink(destination: RecordingListView(
                            viewModel: RecordingListViewModel(
                                recordingRepository: DependencyContainer.shared.recordingRepository,
                                extractedAudioRepository: DependencyContainer.shared.extractedAudioRepository,
                                audioPlayer: DependencyContainer.shared.audioPlayer
...
